// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as form group 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <DateInput
        ariaDescribedby={null}
        autoComplete="false"
        className="form__control"
        data-datepicker="true"
        data-format="default"
        idGuid="id-guid-1"
        key=".0"
        test="test"
        type="date"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with error, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <DateInput
        ariaDescribedby="error-guid-1"
        autoComplete="false"
        className="form__control"
        data-datepicker="true"
        data-format="default"
        idGuid="id-guid-1"
        key=".0"
        test="test"
        type="date"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        foo
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText and error, using two aria-describedby attributes 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <DateInput
        ariaDescribedby="error-guid-1 help-guid-1"
        autoComplete="false"
        className="form__control"
        data-datepicker="true"
        data-format="default"
        idGuid="id-guid-1"
        key=".0"
        test="test"
        type="date"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        bar
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <DateInput
        ariaDescribedby="help-guid-1"
        autoComplete="false"
        className="form__control"
        data-datepicker="true"
        data-format="default"
        idGuid="id-guid-1"
        key=".0"
        test="test"
        type="date"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders the basic input 1`] = `
<input
  autocomplete="false"
  class="form__control"
  data-datepicker="true"
  data-format="default"
  type="date"
/>
`;

exports[`renders the basic input with aria-describedby 1`] = `
<input
  aria-describedby="foo"
  autocomplete="false"
  class="form__control"
  data-datepicker="true"
  data-format="default"
  type="date"
/>
`;

exports[`renders the basic input with id 1`] = `
<input
  autocomplete="false"
  class="form__control"
  data-datepicker="true"
  data-format="default"
  id="foo"
  type="date"
/>
`;

exports[`renders the basic input with idGuid 1`] = `
<input
  autocomplete="false"
  class="form__control"
  data-datepicker="true"
  data-format="default"
  id="bar"
  type="date"
/>
`;

exports[`renders the basic input with placeholder 1`] = `
<input
  autocomplete="false"
  class="form__control"
  data-datepicker="true"
  data-format="default"
  placeholder="foo"
  type="date"
/>
`;

exports[`renders the basic input with required 1`] = `
<input
  autocomplete="false"
  class="form__control"
  data-datepicker="true"
  data-format="default"
  required=""
  type="date"
/>
`;

exports[`will prefer id over idGuid 1`] = `
<input
  autocomplete="false"
  class="form__control"
  data-datepicker="true"
  data-format="default"
  id="foo"
  type="date"
/>
`;
